# jota_ws1_def

./: Dockerfile  cyclonedds.xml  docker-compose.yaml  teste.txt  teste_aleatorio.txt
Aula13/Aula13/: aula13.md
install/: local_setup.sh  setup.sh
install/custom_interfaces/share/custom_interfaces/: package.sh
install/rm_localization/share/rm_localization/: package.sh
log/: latest_build
src/: projeto_final.md
src/custom_interfaces/: CMakeLists.txt
src/rm_localization/: package.xml  setup.py
src/rm_localization/config/: ekf_config.yaml
src/rm_localization/launch/: amcl.launch.py
src/rm_navigation/: setup.py
src/rm_navigation/config/: nav2_params.yaml
src/rm_navigation/launch/: navigation.launch.py
src/rm_navigator/: package.xml  setup.cfg  setup.py
src/rm_navigator/rm_navigator/: navigator.py
src/rm_slam/: setup.py
src/rm_slam/config/: slam_config.yaml
src/rm_slam/launch/: slam.launch.py
src/robot_description/: APS2.md  CMakeLists.txt
src/robot_description/aulas/: aula10.md  aula7.md  aula8.md  aula9.md
src/robot_description/launch/: robot_simulation.launch.py
src/robot_description/rviz/: robot_vis.rviz
src/robot_description/urdf/: sensors.xacro  wheels.xacro
src/robot_navigation/: CMakeLists.txt  package.xml  setup.py
src/robot_navigation/launch/: navigation.launch.py
src/robot_navigation/robot_navigation/: navigation_node.py  rotation_server.py
src/waypoint_navigation_pkg/: package.xml  setup.py
src/waypoint_navigation_pkg/waypoint_navigation_pkg/: waypoint_publisher.py
teste/: teste.py
(+53 files in other folders)
